# Kubernetes-Platform

./: .gitignore  AzuriteConfig  Dockerfile  README.md  alembic.ini  azure-pipelines.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md  issue-template.md  pr-template.md
GitOps/: README.md  k8s_common.sh
GitOps/Kubernetes/: README.md
GitOps/Kubernetes/Calico/: Ceph_NetworkPolicy.yaml
GitOps/Kubernetes/Elasticsearch/: elastic-daemonset.yaml
GitOps/Kubernetes/kube-controller-manager/: dev-kube-controller-manager.yaml
GitOps/Nodes/: k8s_control.sh  vagrant_stop_workers.py
GitOps/docker-vault/: dev.compose.yaml  openssl.cnf  vault.hcl
GitOps/helm-apisix/: application.yaml  dev-application.yaml
GitOps/helm-apisix/dev-basse-values/: dev-apisix-values.yaml  dev-dashboard-values.yaml  dev-ingress-values.yaml
GitOps/helm-apisix/values/: apisix.yaml  dashboard.yaml  ingress.yaml
GitOps/helm-argo/argo-image-updater/: values-dev.yaml
GitOps/helm-eck/eck/: dev-eck-application.yaml
GitOps/helm-eck/elastic-stack-crds/: dev-elastic-application.yaml
GitOps/helm-longhorn/: dev-longhorn-application.yaml
GitOps/helm-longhorn/dev-base-values/: dev-values.yaml
GitOps/helm-metallb/: dev-application.yaml
GitOps/helm-metallb/dev-base-values/: dev-ip-pool.yaml  dev-l2-advert.yaml
GitOps/helm-prometheus/kube-prometheus-stack/: application.yaml  dev-application.yaml
GitOps/helm-rook-ceph/rook-ceph-cluster/: dev-application.yaml
GitOps/helm-rook-ceph/rook-dev-values/: dev-rook-cluster.yaml  (+2 more)
app/: main.py
app/core/: config.py
app/db/: session.py
(+14 files in other folders)
