[tool.poetry]
name = "kubernetes-platform"
version = "0.1.0"
description = ""
authors = ["skwwnl <skwwnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.9"
fastapi = "0.115.8"
uvicorn = "0.34.0"
sqlalchemy = "2.0.38"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
debugpy = "^1.8.12"
black = "^25.1.0"
isort = "^6.0.0"
pytest = "^8.3.4"
flake8 = "^7.1.2"
mypy = "^1.15.0"

[tool.black]
line-length = 150

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

